--- a/pages/index.html
+++ b/pages/index.html
@@ -92,7 +92,29 @@
         </header>
         <main class="bg-dark">
             <div class="latest-trailer-container">
-                <div></div>
+                <div><div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                      </div>
+                      <div class="carousel-item active">
+                      </div>
+                      <div class="carousel-item">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div></div>
             </div>
             <div class="Show-Container d-flex flex-column bg-black">
                 <h1  class="text-center bg-black m-0">Series</h1>
