--- a/pages/index.html
+++ b/pages/index.html
@@ -91,32 +91,22 @@
             </nav>
         </header>
         <main class="bg-dark">
-            <div class="latest-trailer-container">
-                <div><div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                      </div>
-                      <div class="carousel-item active">
-                      </div>
-                      <div class="carousel-item">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div></div>
-            </div>
             <div class="Show-Container d-flex flex-column bg-black">
+                <div class="latest-trailer-container">
+                    <div id="carouselSeries" class="carousel slide">
+                        <div class="carousel-inner">
+
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselSeries" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselSeries" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                </div>
                 <h1  class="text-center bg-black m-0">Series</h1>
             </div>
 
@@ -124,6 +114,8 @@
         <footer class="footer d-flex justify-content-center align-items-center bg-dark " data-bs-theme="dark">
             <span class="text-white">By Keumss 2024</span>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="../assets/js/script.js" ></script>
     </body>
-    <script src="../assets/js/script.js" ></script>
+
 </html>
