page acceuil base

--- a/pages/index.html
+++ b/pages/index.html
@@ -89,13 +89,16 @@
                     </div>
                 </div>
             </nav>
+            <div id="hero">
+                <h1>Quasar</h1>
+            </div>
         </header>
         <main class="bg-dark">
             <div class="latest-trailer-container">
                 <div></div>
             </div>
             <div class="Show-Container d-flex flex-column bg-black">
-                <h1  class="text-center bg-black m-0">Series</h1>
+                <h1>Dernière sortie </h1>
             </div>
 
         </main>
