--- a/pages/index.html
+++ b/pages/index.html
@@ -5,13 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Quasar</title>
         <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="../assets/css/styles.css">
+        <link rel="stylesheet" href="../assets/css/styles.css" />
         <link
             rel="shortcut icon"
             href="../assets/images/logo_Quasar.jpg"
             type="image/x-icon"
         />
-        
+        <link rel="stylesheet" href="../assets/css/star.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" ></script>
     </head>
     <body>
         <header>
@@ -40,13 +42,13 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Series</a>
+                                <a class="nav-link" href="../pages/series.html">Series</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Scan</a>
+                                <a class="nav-link" href="../pages/scan.html">Scan</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Planning</a>
+                                <a class="nav-link" href="../pages/Planning.html">Planning</a>
                             </li>
                             <!-- <li class="nav-item dropdown">
                                 <a
@@ -90,6 +92,10 @@
                 </div>
             </nav>
             <div id="hero">
+                <script>    
+
+                </script>
+                <div id="stars"></div>
                 <h1>Quasar</h1>
             </div>
         </header>
@@ -98,13 +104,17 @@
                 <div></div>
             </div>
             <div class="Show-Container d-flex flex-column bg-black">
-                <h1>Dernière sortie </h1>
+                <h1>Dernière sortie</h1>
             </div>
-
         </main>
-        <footer class="footer d-flex justify-content-center align-items-center bg-dark " data-bs-theme="dark">
+        <footer
+            class="footer d-flex justify-content-center align-items-center bg-dark"
+            data-bs-theme="dark"
+        >
             <span class="text-white">By Keumss 2024</span>
         </footer>
     </body>
-    <script src="../assets/js/script.js" ></script>
+    <script src="../assets/js/script.js"></script>
+    <script src="../assets/js/star.js"></script>
+
 </html>
